Update dependencies and bug fixes

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -30,8 +30,8 @@ bending.command.display.abilities=Abilities:
 bending.command.display.sequences=Sequences:
 bending.command.display.passives=Passives:
 bending.command.bind.require-element={0} requires element {1}
-bending.command.bind.sequence={0} is a sequence and cannot be bound to a slot
 bending.command.bind.success=Successfully bound {0} to slot {1}
+bending.command.bind.fail={0} cannot be bound to a slot
 bending.command.display.header={0}''s bound abilities:
 bending.command.clear.all=Cleared all slots
 bending.command.clear.specific=Cleared ability slot {0}
