Add support for multiple custom translations and make sequence instructions translation friendly

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -1,3 +1,4 @@
+# Commands
 bending.command.help.header=List of commands:
 bending.command.preset.list-not-found=No presets found
 bending.command.preset.create-empty=You can''t create an empty preset
@@ -38,3 +39,19 @@ bending.command.clear.specific=Cleared ability slot {0}
 bending.command.info.empty=No description or instructions found for {0}
 bending.command.info.description={0} description: {1}
 bending.command.info.instructions={0} instructions: {1}
+# Activation methods
+bending.activation.passive=Passive
+bending.activation.attack=Click
+bending.activation.attack-entity=Click Entity
+bending.activation.interact=Right Click Air
+bending.activation.interact-entity=Right Click Entity
+bending.activation.interact-block=Right Click Block
+bending.activation.sneak=Hold Sneak
+bending.activation.sneak-release=Release Sneak
+bending.activation.sneak-tap=Tap Sneak
+bending.activation.fall=Fall
+bending.activation.sequence=Sequence
+# Ability descriptions, instructions and death messages
+bending.ability.airagility.description=This passive ability allows airbenders to run faster and jump higher.
+bending.ability.gracefuldescent.description=This passive allows airbenders to make a gentle landing, negating all fall damage on any surface.
+bending.ability.airwheel.description=Upgrade your airscooter into an airwheel that blocks some attacks and deals damage to nearby enemies.
