Add death messages support, fixes for temp blocks and temp armor, ability improvements

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -55,3 +55,5 @@ bending.activation.sequence=Sequence
 bending.ability.airagility.description=This passive ability allows airbenders to run faster and jump higher.
 bending.ability.gracefuldescent.description=This passive allows airbenders to make a gentle landing, negating all fall damage on any surface.
 bending.ability.airwheel.description=Upgrade your airscooter into an airwheel that blocks some attacks and deals damage to nearby enemies.
+bending.ability.generic.death={0} was slain by {1}''s {2}
+bending.ability.airswipe.death={0} was slashed by {1}''s {2}
