Add diagonal checks for abilities and fixes

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -169,7 +169,7 @@ bending.ability.octopusform.death={0} was slapped to death by {1}''s {2}
 bending.ability.phasechange.description=PhaseChange allows a waterbender to fluidly change between water and ice state of a source. You can use this to transform water into a platform of ice or to melt nearby ice and snow.
 bending.ability.phasechange.instructions=Hold sneak while looking at an ice or snow source to melt it. Left click to freeze.
 bending.ability.torrent.description=Torrent is one of the most powerful moves in a waterbender''s arsenal. This ability creates a stream of water capable of dealing damage, knockback and freezing targets.
-bending.ability.torrent.instructions=Left click at a water source to select it and pull it towards you. This will form a WaterRing around you. Then, left click again to shoot the out, moving in the direction you''re looking. Additionally, you can left click again to freeze the torrent and any nearby entities on impact.
+bending.ability.torrent.instructions=Left click at a water source to select it and pull it towards you. This will form a WaterRing around you. Then, left click again to shoot the out, moving in the direction you''re looking. Additionally, you can left click again to freeze the torrent.
 bending.ability.torrent.death={0} was washed away by {1}''s {2}
 bending.ability.waterbubble.description=WaterBubble is a basic waterbending ability that allows the bender to create air pockets under water. This is incredibly useful for building under water.
 bending.ability.waterbubble.instructions=Hold sneak when in range of water to push it back.
