--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -81,8 +81,8 @@ bending.ability.airswipe.death={0} was slashed by {1}''s {2}
 bending.ability.densityshift.description=This passive ability allows earthbenders to make a firm landing negating all fall damage on any earthbendable surface.
 bending.ability.earthcling.description=This passive ability allows earthbenders to use their EarthGloves to slow or stop their descend while near a wall made of earthbendable materials.
 bending.ability.earthcling.instructions=Hold sneak while on the EarthGlove slot. If both your EarthGloves are available you will completely stop your descend and stay in place, otherwise your will just slow it down.
-bending.ability.ferrocontrol.description=This passive ability allows metalbenders to open and close iron doors and trapdoors.
-bending.ability.ferrocontrol.instructions=Tap sneak while looking at a nearby iron door or trapdoor.
+bending.ability.ferrocontrol.description=This passive ability allows metalbenders to control various metal objects such as iron doors/trapdoors and minecarts.
+bending.ability.ferrocontrol.instructions=Right click an iron door or trapdoor to open/close it. Hold sneak while looking at a minecart to control it.
 bending.ability.earthpillars.description=This ability will raise pillars under nearby entities. The pillars will deal damage and launch them flying in the air. You can also activate this ability by falling from a great height while having the Catapult slot selected.
 bending.ability.earthshards.description=Shatter your EarthGloves into multiple fragments that deal damage to any target hit.
 bending.ability.earthshards.death={0} died from internal bleeding caused by {1}''s {2}
