Bug fixes for policies

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -175,7 +175,7 @@ bending.ability.torrent.death={0} was washed away by {1}''s {2}
 bending.ability.waterbubble.description=WaterBubble is a basic waterbending ability that allows the bender to create air pockets under water. This is incredibly useful for building under water.
 bending.ability.waterbubble.instructions=Hold sneak when in range of water to push it back.
 bending.ability.watermanipulation.description=WaterManipulation is a the most offensive basic ability for waterbenders. Sourcing from icebendable sources will create an blast of ice instead that slows down targets.
-bending.ability.watermanipulation.instructions=Tap sneak while looking at a nearby source to select it. Left click to launch the water manipulation towards your target. You can left click again to redirect the ability. Tap sneak at an enemy''s water manipulation to destroy it.
+bending.ability.watermanipulation.instructions=Tap sneak while looking at a nearby source to select it. Left click to launch the water manipulation towards your target. You can left click again to redirect the ability.
 bending.ability.watermanipulation.death={0} was drowned by {1}''s {2}
 bending.ability.waterring.description=WaterRing is a core ability to all waterbenders. Create a multi-purpose rotating ring of water around you that you reuse for different abilities.
 bending.ability.waterring.instructions=Left click at a water source to select it and pull it towards you. Once the ring forms, you can left click to launch shards of ice that deal damage on impact. Left click while sneaking on the WaterRing slot to cancel the ability.
