--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -41,6 +41,8 @@ bending.command.info.empty=No description or instructions found for {0}
 bending.command.info.description={0} description: {1}
 bending.command.info.instructions={0} instructions: {1}
 bending.command.version.hover=Developed by: {0}\nSource code: {1}\nLicensed under: AGPLv3\n\nClick to open link.
+# Board
+bending.board.title=Slots
 # Activation methods
 bending.activation.passive=Passive
 bending.activation.attack=Click
