Add AirBreath, FireBreath  and various small changes

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -66,6 +66,8 @@ bending.ability.airblade.instructions=Hold sneak to create an expanding blade of
 bending.ability.airblade.death={0} was struck by {1}''s {2}
 bending.ability.airblast.description=AirBlast is the most fundamental bending technique of an airbender. It allows you to launch any entity in its path. It also has various utility applications as it can extinguish fire or a burning entity and cool lava.
 bending.ability.airblast.instructions=Left click in a direction to create a powerful gust of wind. Tapping sneak will change the origin point of your next AirBlast to your targeted location. Holding sneak while launching will reverse its travel direction essentially pulling instead of pushing.
+bending.ability.airbreath.description=AirBreath allows an airbender to forcefully exhale a gust of wind that knocks enemies back and has the potential to extinguish fire and cool lava.
+bending.ability.airbreath.instructions=Hold sneak to release a strong breath of wind.
 bending.ability.airburst.description=AirBurst is a utility ability that allows an airbender to create space between them and whoever is close to them. It can be particularly useful when you are surrounded by enemies, or if you are low in health and need to escape.
 bending.ability.airburst.instructions=Hold sneak to start charging AirBurst until particles appear. Release sneak to create a spherical burst of air around you. Alternatively you can left click to launch a more powerful burst in a cone area. You can also activate this ability by falling from a great height while having the AirBurst slot selected.
 bending.ability.airpunch.description=Create an imploding gust of air that deals damage and knocks back targets. You can use your momentum to create a strong punch.
@@ -139,6 +141,8 @@ bending.ability.combustion.death={0} was wiped off the face of the earth by {1}'
 bending.ability.fireblast.description=This ability is the most fundamental firebending technique and allows you to create a blast of fire at your fingertips. The blast will deal damage, knockback to your target and engulf them in flames. If the blast hits terrain, it will ignite the nearby area.
 bending.ability.fireblast.instructions=Left click to send out a basic FireBlast. You can also hold sneak to charge and release a more powerful version.
 bending.ability.fireblast.death={0} was burnt by {1}''s {2}
+bending.ability.firebreath.description=This advanced firebending technique earned Iroh the nickname Dragon of the West. It allows you to exhale a stream of fire that deals damage and lights terrain on fire.
+bending.ability.firebreath.instructions=Hold sneak to release a breath of fire.
 bending.ability.fireburst.description=FireBurst is a very powerful firebending ability that really shines when you are surrounded by multiple enemies.
 bending.ability.fireburst.instructions=Hold sneak to start charging FireBurst until particles appear. Release sneak to create a spherical burst of flames around you. Alternatively you can left click to launch a more powerful burst in a cone area.
 bending.ability.firejet.description=FireJet is a fundamental mobility move for firebenders. It allows the firebender to blast fire behind them to propel them forward, which can prevent them from taking fall damage or simply to reposition during a fight.
