--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -129,7 +129,6 @@ bending.ability.firespin.description=A circular array of fire that causes damage
 bending.ability.firespin.death={0} was caught in {1}''s {2} inferno
 bending.ability.firewave.description=This ability allows you to create a FireWall that moves forward and expands in size.
 bending.ability.firewheel.description=This ability creates a wheel of fire that travels along the ground leaving a trail of fire behind it.
-bending.ability.jetblast.description=Create an explosive blast that propels your FireJet at higher speeds.
 bending.ability.blaze.description=Blaze is a basic firebending technique that can be quite deadly if used right. It is useful to stop others from chasing you or to create space between you and your enemies.
 bending.ability.blaze.instructions=Left click to send a forward moving arc of fire. Alternatively you can tap sneak to send a blaze all around you.
 bending.ability.bolt.description=Bolt is an extremely powerful technique that causes lightning to strike at your target. If your target is in water or wears conductive metal armor, they bolt will be even deadlier! Entities take more damage the closer they are the bolt''s strike location.
@@ -146,7 +145,7 @@ bending.ability.firebreath.instructions=Hold sneak to release a breath of fire.
 bending.ability.fireburst.description=FireBurst is a very powerful firebending ability that really shines when you are surrounded by multiple enemies.
 bending.ability.fireburst.instructions=Hold sneak to start charging FireBurst until particles appear. Release sneak to create a spherical burst of flames around you. Alternatively you can left click to launch a more powerful burst in a cone area.
 bending.ability.firejet.description=FireJet is a fundamental mobility move for firebenders. It allows the firebender to blast fire behind them to propel them forward, which can prevent them from taking fall damage or simply to reposition during a fight.
-bending.ability.firejet.instructions=Left click to propel yourself in the direction you are looking. Left clicking again while flying will cancel the jet.
+bending.ability.firejet.instructions=Left click to propel yourself in the direction you are looking. Hold sneak while clicking to use the more powerful JetBlast mode instead. Left clicking again while flying will cancel the jet.
 bending.ability.fireshield.description=FireShield is a basic defensive ability that allows a firebender to block projectiles or other bending abilities.
 bending.ability.fireshield.instructions=Hold sneak to create a fire shield around you. Alternatively, you can left click to create a temporary fire shield. Any entities that step near the fire shield, will be ignited.
 bending.ability.firewall.description=FireWall is an advanced firebending technique that can be used for multiple purposes. It is incredibly useful when trying to block off opponents from chasing you or to back them into corners.
