--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -91,7 +91,7 @@ bending.ability.earthpillars.description=This ability will raise pillars under n
 bending.ability.earthshards.description=Shatter your EarthGloves into multiple fragments that deal damage to any target hit.
 bending.ability.earthshards.death={0} died from internal bleeding caused by {1}''s {2}
 bending.ability.catapult.description=Catapult is an advanced earthbending ability that allows you to forcefully push yourself and nearby entities using earth, reaching great heights. This technique is best used when travelling, but it can also be used to quickly reposition in a battle.
-bending.ability.catapult.instructions=Left click to launch yourself in the direction you are looking. You can hold sneak while clicking to perform a weaker launch.
+bending.ability.catapult.instructions=Tap sneak to launch yourself in the direction you are looking (there needs to be enough earth behind where you're looking). You can left click to perform a weaker launch instead.
 bending.ability.collapse.description=Collapse is a great utility ability that allows you to compress and lower earth blocks. You can use this in cave systems to trap entities and suffocate them.
 bending.ability.collapse.instructions=Left click an earthbendable block. If there is space under that block, it will be collapsed. Alternatively, you can tap sneak to collapse multiple blocks at a time.
 bending.ability.eartharmor.description=This ability encases the earthbender in armor, giving them protection. It is a fundamental earthbending technique that is used to survive longer in battles. The type and strength of armor depends on the material you source from.
