Refactor firetick, bursts, firewave integration into firewall

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -127,7 +127,6 @@ bending.ability.firekick.description=This is a basic firebending ability that cr
 bending.ability.firekick.death={0} was kicked to the floor, in flames, from {1}''s {2}
 bending.ability.firespin.description=A circular array of fire that causes damage and knockback to nearby enemies.
 bending.ability.firespin.death={0} was caught in {1}''s {2} inferno
-bending.ability.firewave.description=This ability allows you to create a FireWall that moves forward and expands in size.
 bending.ability.firewheel.description=This ability creates a wheel of fire that travels along the ground leaving a trail of fire behind it.
 bending.ability.blaze.description=Blaze is a basic firebending technique that can be quite deadly if used right. It is useful to stop others from chasing you or to create space between you and your enemies.
 bending.ability.blaze.instructions=Left click to send a forward moving arc of fire. Alternatively you can tap sneak to send a blaze all around you.
@@ -149,7 +148,7 @@ bending.ability.firejet.instructions=Left click to propel yourself in the direct
 bending.ability.fireshield.description=FireShield is a basic defensive ability that allows a firebender to block projectiles or other bending abilities.
 bending.ability.fireshield.instructions=Hold sneak to create a fire shield around you. Alternatively, you can left click to create a temporary fire shield. Any entities that step near the fire shield, will be ignited.
 bending.ability.firewall.description=FireWall is an advanced firebending technique that can be used for multiple purposes. It is incredibly useful when trying to block off opponents from chasing you or to back them into corners.
-bending.ability.firewall.instructions=Left click to create a wall of fire that damages damages nearby entities and deals knockback.
+bending.ability.firewall.instructions=Left click to create a wall of fire that damages damages nearby entities and deals knockback. Hold sneak to move the wall forward.
 bending.ability.firewall.death={0} run into {1}''s {2}
 bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it it capable of melting snow and cooking food.
 bending.ability.heatcontrol.instructions=Left click while looking at ice to melt it or fire to extinguish it. Hold sneak while you have raw food your on hand to cook it. While on the HeatControl slot you are immune to fire tick damage.
