--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -2,6 +2,7 @@
 # Commands
 bending.command.help.header=List of commands:
 bending.command.preset.list-not-found=No presets found
+bending.command.preset.invalid-name=Invalid preset name, only alphanumeric characters are supported
 bending.command.preset.create-empty=You can''t create an empty preset
 bending.command.preset.create-success=Successfully created preset {0}
 bending.command.preset.create-exists=Preset {0} already exists
@@ -9,7 +10,7 @@ bending.command.preset.create-cancelled=Creation of preset {0} was cancelled
 bending.command.preset.create-fail=There was an error while saving preset {0}
 bending.command.preset.remove-success=Preset {0} has been removed
 bending.command.preset.remove-fail=Failed to remove preset {0}
-bending.command.preset.bind-success=Successfully bound {0} abilities from preset {1}
+bending.command.preset.bind-success=Successfully bound preset {0}
 bending.command.preset.bind-fail=No abilities could be bound from preset {0}
 bending.command.modifier.add=Successfully added modifier to {0}
 bending.command.modifier.clear=Cleared attribute modifiers for {0}
