Add missing flamerush description and instructions

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -152,6 +152,8 @@ bending.ability.fireshield.instructions=Hold sneak to create a fire shield aroun
 bending.ability.firewall.description=FireWall is an advanced firebending technique that can be used for multiple purposes. It is incredibly useful when trying to block off opponents from chasing you or to back them into corners.
 bending.ability.firewall.instructions=Left click to create a wall of fire that damages damages nearby entities and deals knockback. Hold sneak to move the wall forward.
 bending.ability.firewall.death={0} run into {1}''s {2}
+bending.ability.flamerush.description=Flamerush is an advanced firebending technique that allows a skilled bender to merge two separate streams of fire into a single powerful attack.
+bending.ability.flamerush.instructions=Hold sneak to charge and release to create a dual fire stream. When smoke particles appear the move is fully charged.
 bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it it capable of melting snow and cooking food.
 bending.ability.heatcontrol.instructions=Left click while looking at ice to melt it or fire to extinguish it. Hold sneak while you have raw food your on hand to cook it. While on the HeatControl slot you are immune to fire tick damage.
 bending.ability.fastswim.description=This passive ability allows waterbenders to swim faster.
