Raytracing api, replace bolt with lightning, minor tweaks

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -132,9 +132,6 @@ bending.ability.firespin.death={0} was caught in {1}''s {2} inferno
 bending.ability.firewheel.description=This ability creates a wheel of fire that travels along the ground leaving a trail of fire behind it.
 bending.ability.blaze.description=Blaze is a basic firebending technique that can be quite deadly if used right. It is useful to stop others from chasing you or to create space between you and your enemies.
 bending.ability.blaze.instructions=Left click to send a forward moving arc of fire. Alternatively you can tap sneak to send a blaze all around you.
-bending.ability.bolt.description=Bolt is an extremely powerful technique that causes lightning to strike at your target. If your target is in water or wears conductive metal armor, they bolt will be even deadlier! Entities take more damage the closer they are the bolt''s strike location.
-bending.ability.bolt.instructions=Hold sneak to charge up a lightning bolt until particles appear. Release to discharge and strike the targeted location. Be careful though, the enemy could redirect your lightning back at you! If you keep charging for too long, you will also get electrocuted.
-bending.ability.bolt.death={0} was deep fried by {1}''s {2}
 bending.ability.combustion.description=Combustion is an extremely advanced and powerful firebending ability. It allows you to focus large amounts of energy into your body and then release them in the form of a deadly beam.
 bending.ability.combustion.instructions=Hold sneak to charge and release to create a maneuverable combustion beam. You can left click to detonate early. Be warned, if you take damage while charging, the combustion will explode in your face!
 bending.ability.combustion.death={0} was wiped off the face of the earth by {1}''s {2}
@@ -156,6 +153,9 @@ bending.ability.flamerush.description=Flamerush is an advanced firebending techn
 bending.ability.flamerush.instructions=Hold sneak to charge and release to create a dual fire stream. When smoke particles appear the move is fully charged.
 bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it it capable of melting snow and cooking food.
 bending.ability.heatcontrol.instructions=Left click while looking at ice to melt it or fire to extinguish it. Hold sneak while you have raw food your on hand to cook it. While on the HeatControl slot you are immune to fire tick damage.
+bending.ability.lightning.description=Lightning is an extremely powerful technique that was originally reserved for members of the Royal family. It allows the firebender to create an arc of electricity that flows towards the target, exploding on impact! If your target is in water the arc will be even deadlier!
+bending.ability.lightning.instructions=Hold sneak to generate lightning arcs until particles appear. Release to discharge and strike the targeted location. Be careful though, the enemy can redirect your lightning back at you! If you keep charging for too long, you will also get electrocuted.
+bending.ability.lightning.death={0} was deep fried by {1}''s {2}
 bending.ability.fastswim.description=This passive ability allows waterbenders to swim faster.
 bending.ability.hydrosink.description=This passive enables waterbenders to softly land on any waterbendable surface. negating all fall damage.
 bending.ability.frostbreath.description=Skilled waterbenders are able to freeze their breath as they exhale, freezing water into ice and slowing down nearby entities.
