Native raytracing, add element descriptions and selection menu

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -33,10 +33,12 @@ bending.command.display.abilities-not-found=No abilities found for {0}
 bending.command.display.abilities=Abilities:
 bending.command.display.sequences=Sequences:
 bending.command.display.passives=Passives:
-bending.command.bind.require-element={0} requires element {1}
+bending.command.bind.require-element={0} requires the element of {1}
 bending.command.bind.success=Successfully bound {0} to slot {1}
 bending.command.bind.fail={0} cannot be bound to a slot
-bending.command.display.header={0}''s bound abilities:
+bending.command.bind.no-permission=You do not have permission to bind {0}
+bending.command.binds.header={0}''s bound abilities:
+bending.command.binds.no-elements=No elements
 bending.command.clear.all=Cleared all slots
 bending.command.clear.specific=Cleared ability slot {0}
 bending.command.info.empty=No description or instructions found for {0}
@@ -45,6 +47,14 @@ bending.command.info.instructions={0} instructions: {1}
 bending.command.version.hover=Developed by: {0}\nSource code: {1}\nLicensed under: AGPLv3\n\nClick to open link.
 # Board
 bending.board.title=Slots
+# GUI
+bending.gui.no-permission=You do not have permission to perform this action
+bending.gui.elements.title=Choose your Element
+bending.gui.elements.help-title=Menu Information
+bending.gui.elements.choose=Left click to choose
+bending.gui.elements.display=Right click to list all abilities
+bending.gui.elements.add=Shift-left click to add
+bending.gui.elements.remove=Shift-right click to remove
 # Activation methods
 bending.activation.passive=Passive
 bending.activation.attack=Click
@@ -57,6 +67,11 @@ bending.activation.sneak-release=Release Sneak
 bending.activation.sneak-tap=Tap Sneak
 bending.activation.fall=Fall
 bending.activation.sequence=Sequence
+# Elements
+bending.element.air=Airbending is the bending art used by the Air Nomads. It concentrates on speed and evasion, forgoing a strong offense for a greater defense.
+bending.element.water=Waterbending is practiced by some people of the Water Tribe. Similar to their element, waterbenders are extremely adaptable and versatile.
+bending.element.earth=Earthbending originates in the Earth Kingdom. It demands a special connection with the earth that is achievable with neutral jing, listening, though seemingly doing nothing and waiting for the right moment to strike.
+bending.element.fire=Firebending is used by the people of the Fire Nation and is the most aggressive bending art.
 # Ability descriptions, instructions and death messages
 bending.ability.generic.death={0} was slain by {1}''s {2}
 bending.ability.airagility.description=This passive ability allows airbenders to run faster and jump higher.
