Make elements translatable

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -68,10 +68,14 @@ bending.activation.sneak-tap=Tap Sneak
 bending.activation.fall=Fall
 bending.activation.sequence=Sequence
 # Elements
-bending.element.air=Airbending is the bending art used by the Air Nomads. It concentrates on speed and evasion, forgoing a strong offense for a greater defense.
-bending.element.water=Waterbending is practiced by some people of the Water Tribe. Similar to their element, waterbenders are extremely adaptable and versatile.
-bending.element.earth=Earthbending originates in the Earth Kingdom. It demands a special connection with the earth that is achievable with neutral jing, listening, though seemingly doing nothing and waiting for the right moment to strike.
-bending.element.fire=Firebending is used by the people of the Fire Nation and is the most aggressive bending art.
+bending.element.air=Air
+bending.element.air.description=Airbending is the bending art used by the Air Nomads. It concentrates on speed and evasion, forgoing a strong offense for a greater defense.
+bending.element.water=Water
+bending.element.water.description=Waterbending is practiced by some people of the Water Tribe. Similar to their element, waterbenders are extremely adaptable and versatile.
+bending.element.earth=Earth
+bending.element.earth.description=Earthbending originates in the Earth Kingdom. It demands a special connection with the earth that is achievable with neutral jing, listening, though seemingly doing nothing and waiting for the right moment to strike.
+bending.element.fire=Fire
+bending.element.fire.description=Firebending is used by the people of the Fire Nation and is the most aggressive bending art.
 # Ability descriptions, instructions and death messages
 bending.ability.generic.death={0} was slain by {1}''s {2}
 bending.ability.airagility.description=This passive ability allows airbenders to run faster and jump higher.
