Refactor board code, fix ability descriptions

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -104,8 +104,8 @@ bending.ability.airswipe.description=AirSwipe is the most commonly used damage a
 bending.ability.airswipe.instructions=Left click to activate a basic AirSwipe. You can hold sneak to charge and then release a more powerful version.
 bending.ability.airswipe.death={0} was slashed by {1}''s {2}
 bending.ability.densityshift.description=This passive ability allows earthbenders to make a firm landing negating all fall damage on any earthbendable surface.
-bending.ability.earthcling.description=This passive ability allows earthbenders to use their EarthGloves to slow or stop their descend while near a wall made of earthbendable materials.
-bending.ability.earthcling.instructions=Hold sneak while on the EarthGlove slot. If both your EarthGloves are available you will completely stop your descend and stay in place, otherwise your will just slow it down.
+bending.ability.earthcling.description=This passive ability allows earthbenders to use their EarthGloves to slow or stop their descent while near a wall made of earthbendable materials.
+bending.ability.earthcling.instructions=Hold sneak while on the EarthGlove slot. If you have a glove available you will completely stop your descent and stay in place, otherwise your will just slow it down.
 bending.ability.ferrocontrol.description=This passive ability allows metalbenders to control various metal objects such as iron doors/trapdoors and minecarts.
 bending.ability.ferrocontrol.instructions=Right click an iron door or trapdoor to open/close it. Hold sneak while looking at a minecart to control it.
 bending.ability.earthpillars.description=This ability will raise pillars under nearby entities. The pillars will deal damage and launch them flying in the air. You can also activate this ability by falling from a great height while having the Catapult slot selected.
@@ -116,7 +116,7 @@ bending.ability.catapult.instructions=Tap sneak to launch yourself in the direct
 bending.ability.collapse.description=Collapse is a great utility ability that allows you to compress and lower earth blocks. You can use this in cave systems to trap entities and suffocate them.
 bending.ability.collapse.instructions=Left click an earthbendable block. If there is space under that block, it will be collapsed. Alternatively, you can tap sneak to collapse multiple blocks at a time.
 bending.ability.eartharmor.description=This ability encases the earthbender in armor, giving them protection. It is a fundamental earthbending technique that is used to survive longer in battles. The type and strength of armor depends on the material you source from.
-bending.ability.eartharmor.instructions=Left click while looking at a nearby earth or metal source to pull it towards you. Once it reaches you, it will form the armor.
+bending.ability.eartharmor.instructions=Left click while looking at a nearby earth or metal source to pull it towards you. Once it reaches you, it will form the armor. Sneak at a nearby earthbendable source to raise a temporary bulwark.
 bending.ability.earthblast.description=EarthBlast is the most basic earthbending damage ability that deals damage and knockback to the target.
 bending.ability.earthblast.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch the blast towards your target. You can left click again to redirect the blast. Tap sneak at an enemy''s blast to destroy it.
 bending.ability.earthblast.death={0} was shattered by {1}''s {2}
