Refactor commands using cloudframework

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -44,7 +44,8 @@ bending.command.clear.specific=Cleared ability slot {0}
 bending.command.info.empty=No description or instructions found for {0}
 bending.command.info.description={0} description: {1}
 bending.command.info.instructions={0} instructions: {1}
-bending.command.version.hover=Developed by: {0}\nSource code: {1}\nLicensed under: AGPLv3\n\nClick to open link.
+bending.command.version.hover=Developed by: {0}\nSource code: {1}\nLicensed under: {2}
+bending.command.version.hover.open-link=Click to open link.
 # Board
 bending.board.title=Slots
 # GUI
