Add color palette, api tweaks, bug fixes

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -44,13 +44,14 @@ bending.command.clear.specific=Cleared ability slot {0}
 bending.command.info.empty=No description or instructions found for {0}
 bending.command.info.description={0} description: {1}
 bending.command.info.instructions={0} instructions: {1}
-bending.command.version.hover=Developed by: {0}\nSource code: {1}\nLicensed under: {2}
+bending.command.version.hover=Developer: {0}\nLicense: {1}\nSource code: {2}
 bending.command.version.hover.open-link=Click to open link.
 # Board
 bending.board.title=Slots
+bending.board.empty-slot=-- Slot {0} --
 # GUI
 bending.gui.no-permission=You do not have permission to perform this action
-bending.gui.elements.title=Choose your Element
+bending.gui.elements.title=Choose your element
 bending.gui.elements.help-title=Menu Information
 bending.gui.elements.choose=Left click to choose
 bending.gui.elements.display=Right click to list all abilities
